# Di_Project_part2

./: .gitignore  README.md
Source/: CMakeLists.txt  Results  main  main.c  makefile  out.txt  run.sh  test1
Source/Basic_Structs/: Basic_Structs.h
Source/Basis_Structs/: Relation.h  Tuple.h
Source/Batch/: Batch.c  Batch.h
Source/Initializer/Argument_Data/: Arguments_Data.c  Arguments_Data.h
Source/Initializer/Argument_Manager/: Argument_Manager.c  Argument_Manager.h
Source/Initializer/Table_Allocator/: Table_Allocator.c  Table_Allocator.h
Source/Initializer/Work_Reader/: .Work_Reader.c.swp  Work_Reader.c  Work_Reader.h
Source/Query/: Query.c  Query.h
Source/Query_execution/Execution_Queue/: Execution_Queue.c  Execution_Queue.h
Source/Query_execution/Filter/: Filter.c  Filter.h
Source/Query_execution/Join_Struct/: Join_Struct.c  Join_Struct.h
Source/Query_execution/Preparator/: Preparator.c  Preparator.h
Source/Query_execution/Projection/: Projection.c  Projection.h
Source/Query_execution/Query_executor/: Query_Executor.c  Query_Executor.h
Source/Query_execution/Query_executor/Filter_Executor/: Filter_Executor.c  Filter_Executor.h
Source/Query_execution/Query_executor/Join_Execution/: Join_Execution.c  Join_Execution.h
Source/Query_execution/Query_parser/: Query_parser.c  Query_parser.h
Source/Query_executor/: Query_Executor.c  Query_Executor.h
Source/Util/: Utilities.c  Utilities.h
Source/Work_Executor/: Work_Executor.c  Work_Executor.h
Source/Work_Reader/: Work_Reader.c  Work_Reader.h
(+23 files in other folders)
